[tool.poetry]
name = "component"
version = "0.1.0"
description = ""
authors = ["Carson Gee <carson.gee@datarobot.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"
allure-pytest = "^2.12.0"
pylint = "^2.15.10"
pytest-xdist = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "component:__main__"
